Fix the gap under some main menu items

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1686,7 +1686,8 @@ ul.sf-menu {
 a.menuparent:after {
   content: '\f0da';
   margin-left: 0.5em;
-  font-family: FontAwesome; }
+  font-family: FontAwesome;
+  line-height: 1; }
 
 a.menuparent.sf-depth-1:after {
   content: '\f0d7'; }
