--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -88,6 +88,7 @@ a.menuparent:after {
   content: '\f0da';
   margin-left: 0.5em;
   font-family: FontAwesome;
+  line-height: 1;
 }
 
 a.menuparent.sf-depth-1:after {
